@@ -1,4 +1,5 @@
 HEAD
+	+ Retrieve the maximum users from Zentyal Remote
 	+ Added new i18n editions
 	+ Store an ad message instead of enforcing max number of users
 	  in the registration check
